@@ -33,7 +33,7 @@ requires:
   Data::Message::Simple: 0
   DateTime: 0
   Exporter: 0
-  List::Util: 0
+  List::Util: 1.33
   Plack::App::CPAN::Changes: 0.03
   Plack::App::URLMap: 0
   Plack::Component: 0
